# CSAW-CTF-2023-Quals

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: csaw-challenge-idea.md
IR/: WRITEUP.md
IR/C2 server/: challenge.json
IR/Challenge files/: server_deployment.sh
IR/Challenge files/Content_for_DC/: db.sqlite3  manage.py
IR/Challenge files/Content_for_Host/: Comment_Cards_August_2023.docx
IR/Challenge files/emails/: read.txt
IR/Challenge files/final/: Decryption.py  Hudson_Hustles_new_flyer.EXTEN  RSA private key.txt  RSA public key.txt  Ransomware.cs  Tiger_Woods_Hustlin.EXTEN  test  test2
IR/Challenge files/initial/: Hudson_Hustles_Financial_Report_July_2023.docx  README.md  document.xml.rels  exploit.html
IR/Challenge files/secondary/: CMakeLists.txt  README.md  vcpkg.json
IR/Challenge files/secondary/src/: main.cpp
IR/Challenge files/secondary/src/base64/: base64.cpp
IR/Challenge files/secondary/src/key/: key.cpp  key.h
IR/Challenge files/secondary/src/lsass/: lsass.cpp  lsass.h
IR/Challenge files/secondary/src/network/: network.cpp  network.h
IR/Challenge files/secondary/src/obfuscation/: obfuscation.cpp  obfuscation.h
IR/Challenge files/secondary/src/rc4/: rc4.cpp  rc4.h
IR/Communicator/: challenge.json  config.yaml  server.py  solver.py
IR/Disclaimer/: challenge.json
IR/Initial Access/: challenge.json  config.yaml
IR/Ransomware/: Dockerfile  challenge.json  config.yaml  server.py
IR/Recover Domain Controller Files/: challenge.json
IR/Recover Host FIles/: challenge.json
IR/What is going on/: challenge.json
(+101 files in other folders)
